app/assets/stylesheets/users.scss
// Place all the styles related to the users controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

#root{
  // background-color: #ECECE3;
  // background-color: #eae8de;
  background-image: url('https://s.gr-assets.com/assets/layout/tan-bg-texture.jpg');
}
.auth-form-container{
  position: relative;
  top: 20px;
  display: flex;
  align-items: center;
  justify-content: center;
  font-family: 'Lato', sans-serif;
}
.auth-form-header{
  font-family: 'Righteous', cursive;
  font-weight: 300;
  text-shadow: #FC8 0px 0 3px;
  font-size: 27px;
  padding: 10px;
}

.auth-form{
  width: 580px;
  height:580px;
  background-color: white;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  border: 1px solid #d0d0c9;
  border-radius: 8px;
}
.auth-form > ul > li{
  width: 300px;
  height: 50px;
  // border: 1px solid red;
  border-radius: 4px;
  display: flex;
  align-items: center;
  justify-content: center;
  margin: 15px;
  margin-bottom: 30px;
}
.switch-forms, .submit-row, {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
}

.switch-forms li{
width: 120px;
font-size: 12px;
text-align: center;

}

.auth-field{
  border: 1px solid grey;
  border-radius: 3px;
  height: 40px;
  width: 300px;
  padding-left: 5px;
}

.submit-row input{
  padding:10px 20px;
  background-color: #F4F1EA;
  border: 1px solid #d5d0c5;
  border-radius: 4px;
  margin: 10px;
  letter-spacing: .75px;
}

.submit-row input:hover{
  background-color: #ede6d6
}

.auth-form-input{
  display: flex;
  flex-direction: column;
  width: 300px;
  font-family: 'Lato', sans-serif;
}

.auth-form-input-li{
  margin-bottom: 30px;
}


.auth-form-demo span{
  padding: 14px;
  background-color: #f5d47a;
  border: 1px solid #ae8b39;
  width: 280px;
  border-radius: 4px;
  text-align: center;
}

.auth-form-demo span:hover{
  background-color: #f1c26d;
  cursor: pointer;
}

.auth-form-title{
  font-family: 'Merriweather', serif;
  font-size: 20px;
  font-weight: 700;
  letter-spacing: .75px;
}

.auth-form-link{
  color: #28615C
}

.auth-form-link:hover{
  text-decoration: underline;
}
.auth-form-demo-link{
  color: #28615C
}

.auth-form-demo-link:hover{
  text-decoration: underline;
  cursor: pointer;
}

.auth-form-error{
  background-color: #fef7cd;
  font-size: 12px;
  text-align: center;
}
.image-footer{
  position: relative;
  height:50px;
  top: 225px;
  background-image: url('https://s.gr-assets.com/assets/layout/bookrow.jpg');
}

